# save-sync

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: archive.rs  lib.rs  main.rs
migrations/2020-04-23-014711_create_users/: up.sql
migrations/2020-04-23-020623_create_saves/: down.sql  up.sql
migrations/2020-04-23-021037_create_files/: up.sql
server/: Cargo.toml
src/: archive.rs  config.rs  database.rs  lib.rs  models.rs  schema.rs
