[package]
name = "save-sync"
version = "0.1.0"
authors = ["paoda <musukarekai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "r2d2"] }
lazy_static = "1.4.0"
chrono = "0.4.11"
dotenv = "0.15.0"
byteorder = "1.3.4"
zstd = "0.5.1"
tar = "0.4.26"
uuid = { version = "0.8.1", features = ["v4"] }
twox-hash = "1.5.0"
toml = "0.5.6"
serde = { version = "1.0.106", features = ["serde_derive"] }
directories = "2.0.2"
diesel_migrations = "1.4.0"

[workspace]
members = ["cli", "server"]
default-members = ["cli", "server"]

[dev-dependencies]
rand = "0.7.3"
