[package]
name = "save-sync"
version = "0.1.0"
authors = ["paoda <musukarekai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
directories = "2.0.2"
lazy_static = "1.4.0"
libsqlite3-sys = { version = "0.17.3", features = ["bundled"] }
serde = { version = "1.0.107", features = ["serde_derive"] }
tar = "0.4.26"
toml = "0.5.6"
twox-hash = "1.5.0"
uuid = { version = "0.8.1", features = ["v4"] }
zstd = "0.5.1"

[workspace]
members = ["cli", "server"]
default-members = ["cli", "server"]

[dev-dependencies]
rand = "0.7.3"
dotenv = "0.15.0"
tempfile = "3.1.0"