[package]
name = "save-sync"
version = "0.1.0"
authors = ["paoda <musukarekai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
chrono = "0.4"
diesel = { version = "1.4", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.4"
directories = "3.0"
lazy_static = "1.4"
libsqlite3-sys = { version = "0.18", features = ["bundled"] }
serde = { version = "1.0", features = ["serde_derive"] }
tar = "0.4"
toml = "0.5"
twox-hash = "1.5"
uuid = { version = "0.8", features = ["v4"] }
zstd = "0.5"
thiserror = "1.0"

[workspace]
members = ["cli", "server"]
default-members = ["cli", "server"]

[dev-dependencies]
rand = "0.7"
dotenv = "0.15"
tempfile = "3.1"
uuid = { version = "0.8", features = ["v4"] }
