[package]
name = "cli"
version = "0.1.0"
authors = ["paoda <musukarekai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.30"
chrono = "0.4.11"
clap = "2.33.1"
save-sync = { path = ".." }
uuid = { version= "0.8.1", features = ["v4"] } 